# DeepBayesTorch

./: .gitignore  README.md  all_models_attack_mnist.py  attack_black_box.py  attack_infty.py  attack_infty_l1_l2.py  attack_l2.py  attack_l2_cw.py  attack_mnist.py  pyproject.toml  vae_mnist.py
alg/: vae_new.py
attacks/: attack.py  attack_config.py  black_box.py  model_eval.py  momentum_iterative_method.py
attacks/load/: load_bayes_classifier.py  load_bayes_classifier_on_fea.py  load_classifier.py  vgg_cifar10.py
models/: conv_encoder_cifar10.py  conv_encoder_mnist.py  conv_generator_cifar10_A.py  conv_generator_cifar10_B.py  conv_generator_cifar10_C.py  conv_generator_cifar10_D.py  conv_generator_cifar10_E.py  conv_generator_cifar10_F.py  conv_generator_cifar10_G.py  conv_generator_mnist_A.py  conv_generator_mnist_B.py  conv_generator_mnist_C.py  conv_generator_mnist_D.py  conv_generator_mnist_E.py  conv_generator_mnist_F.py  conv_generator_mnist_G.py  mlp_encoder_cifar10.py  mlp_generator_cifar10_E.py  mlp_generator_cifar10_F.py  mlp_generator_cifar10_G.py
results/: mnist_accuracy_vs_epsilon.json
tutorial-env/: pyvenv.cfg
tutorial-env/Scripts/: activate  activate.bat
utils/: gtsrb.py  mnist.py  utils.py  visualisation.py
