[tool.poetry]
name = "pgm"
version = "0.1.0"
description = ""
authors = ["killian31 <80256683+killian31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
torch = "2.2.2"
torchvision = "0.17.2"
matplotlib = "^3.9.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
